--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,36 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.0.1'
-    implementation 'com.android.support:support-v4:26.0.1'
     implementation 'com.android.support:design:26.0.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    //Firebase UI
+
+    implementation "com.google.firebase:firebase-auth:11.2.0"
+    implementation "com.google.android.gms:play-services-auth:11.2.0"
+
+    implementation "com.android.support:customtabs:26.0.1"
+    implementation "com.android.support:cardview-v7:26.0.1"
+    implementation "com.google.firebase:firebase-database:11.2.0"
+
+    implementation "com.android.support:recyclerview-v7:26.0.1"
+    implementation "com.android.support:support-v4:26.0.1"
+    implementation "com.google.firebase:firebase-storage:11.2.0"
+
+    implementation "com.android.support:palette-v7:26.0.1"
+    implementation 'com.google.firebase:firebase-messaging:11.2.0'
+    implementation 'com.google.firebase:firebase-config:11.2.0'
+    implementation 'com.firebaseui:firebase-ui:2.2.0'
+    implementation 'com.facebook.android:facebook-android-sdk:4.22.1'
+    implementation 'com.google.android.gms:play-services-vision:11.2.0'
+    implementation 'de.hdodenhof:circleimageview:1.3.0'
+    implementation 'com.shawnlin:number-picker:2.4.4'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.afollestad.material-dialogs:core:0.9.4.7'
+    implementation 'com.github.bumptech.glide:glide:4.0.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
+    //Testing
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.0'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.0'
 }
+apply plugin: 'com.google.gms.google-services'
